--- a/MoshiLib/build.gradle
+++ b/MoshiLib/build.gradle
@@ -11,8 +11,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 2
-        versionName "1.1"
+        versionCode 3
+        versionName "1.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -44,5 +44,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     // moshi
-    implementation('com.squareup.moshi:moshi-kotlin:1.12.0')
+    implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
 }
